Add exception messages to deserializers and java 20
The plan is to update this to Java 21 once it is released.